--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: BlinkMaker
-subtitle: Open source DIY Electronics // Blog // Projects
+subtitle: Open source DIY Electronics / Blog / Projects
 use-site-title: true
 ---
 
