--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Blink Maker
-subtitle: Blink an LED - the 'Hello, World!' of programming for electronics
+subtitle: Blink an LED is the 'Hello, World!' of programming for electronics
 use-site-title: true
 ---
 
